added endpoint to grant review rights to an existing user
