# nodejs-server-server/api/swagger.yaml
@@ -157,8 +157,60 @@ paths:
           schema:
             type: "string"
       x-swagger-router-controller: "SubmitReview"
- 
- 
+
+  /users/{username}/grantReviewRights:
+    post:
+      tags:
+      - "Project management"
+      summary: "allow an existing user to become reviewer"
+      description: ""
+      operationId: "GrantReviewRights"
+      produces:
+      - "application/json"
+      - "text/plain"
+      parameters:
+      - name: "X-request-use-token"
+        in: "header"
+        description: "boolean, true if a session token is used"
+        required: false
+        type: "boolean"
+      - name: "X-request-token"
+        in: "header"
+        description: "session token"
+        required: false
+        type: "string"
+      - name: "username"
+        in: "path"
+        description: "Username"
+        required: true
+        type: "string"
+        format: "uuid"
+      - name: "X-request-password"
+        in: "header"
+        description: "Password of the user"
+        required: false
+        type: "string"
+        format: "string"
+      - name: "X-request-reviewtoken"
+        in: "header"
+        description: "Review token"
+        required: true
+        type: "string"
+        format: "string"
+      responses:
+        200:
+          description: "Reviewing rights successfully added"
+          schema:
+            $ref: "#/definitions/inline_response_200"
+        401:
+          description: "wrong username/pw or wrong project"
+          schema:
+            type: "string"
+        404:
+          description: "username not found"
+          schema:
+            type: "string"
+      x-swagger-router-controller: "GrantReviewRights"
 
   /users/{username}/{projectid}/addreviewer:
     patch:
